<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/setting"
        android:title="@string/menu1"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings_black_24dp"
        />

    <item
        android:id="@+id/share"
        android:title="@string/menu2"
        app:showAsAction="always"
        android:icon="@drawable/ic_share_black_24dp"
        />

    <item
        android:id="@+id/about"
        android:title="@string/menu3"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/feedback"
        android:title="@string/menu4"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/rate"
        android:title="@string/menu5"
        app:showAsAction="never"
        />

</menu>