<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:id="@+id/layout3"
    tools:context=".Main3Activity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:weightSum="5"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music"
                android:textColor="#739f0f"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"
                />

            <TextView
                android:id="@+id/sfx"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sfx"
                android:textColor="#739f0f"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="25dp"
                />

            <TextView
                android:id="@+id/theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textColor="#739f0f"
                android:textSize="30sp"
                android:textStyle="bold"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <Button
                android:id="@+id/on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#d6d286"
                android:layout_marginBottom="15dp"

                />

            <Button
                android:id="@+id/on1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#d6d286"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#d6d286"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/off"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#d6d286"
                android:layout_marginBottom="15dp"

                />

            <Button
                android:id="@+id/off1"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#d6d286"
                android:layout_marginBottom="15dp"
                />

            <Button
                android:id="@+id/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark"
                android:textSize="20sp"
                android:textStyle="bold"
                android:backgroundTint="#d6d286"
                />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>