<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout4"
    android:orientation="vertical"
    android:layout_marginTop="-60dp"
    android:background="@drawable/background"
    tools:context=".Main4Activity">
    <LinearLayout
        android:id="@+id/abt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >



        <ImageView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/logo3"
            android:scaleType="fitXY"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textColor="#77d540"

                />

            <TextView
                android:id="@+id/dev1"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/c"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textColor="#d9a87b"

                />

            <TextView
                android:id="@+id/dev2"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/d"
                android:textSize="15sp"
                android:textColor="#f9f8f7"
                android:textAlignment="center"

                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
